# GlassGovernments

./: .gitignore  2022_Boyle_output.csv  2022_Boyle_output.xlsx  2022_Boyle_source.csv  2022_Deluzio_data.py  2022_Deluzio_map.py  2022_Deluzio_output.csv  2022_Deluzio_output.xlsx  2022_Fitzpatrick_output.csv  2022_Fitzpatrick_output.xlsx  2022_Fitzpatrick_source.csv  2022_House_PA17_Deluzio.py  2022_Kelly_output.csv  2022_Kelly_output.xlsx  2022_Kelly_source.csv  2022_Lee_data.py  2022_Lee_output.csv  2022_Lee_output.xlsx  2022_Lee_source.csv  2022_PA_17_DELUZIO_CHRISTOPHER_DEMOCRATIC_clean.csv  2022_PA_17_DELUZIO_CHRISTOPHER_DEMOCRATIC_source.xlsx  Data.py  README.md  caffeinate.py  calculations.py  config.ts  data_cleaner.py  data_uploader.py  db.js  db.ts  donation_map.py  environment.yml  fec_scraper.py  index.html  localDB.ts  main.js  migrate.js  organize_data.py  package-lock.json  package.json  (+15 more)
pipelines/: db.py  fetch_from_db.py  insert_to_db.py  package-lock.json  package.json  pyproject.toml  supabase_client.py  supabase_config.py
pipelines/bill-metadata/: schema.ts  sql.ts  types.ts
pipelines/bill-texts/: fetchFromFiles.ts  insertToDB.ts  loadFromFiles.ts  main.ts
pipelines/bill-tracking/: chamber_type.py  enums.py  fetch_db_pubdate.py  fetch_from_db.py  filter_rows.py  insert_to_db.py  main.py  trigger.py  update_db_pubdate.py
pipelines/db/: __init__.py  supabase_config.py
pipelines/pa/: fetch_chamber_updates.py  last_pubdate_house.txt  last_pubdate_senate.txt  update_feed_pubdate.py  urls.py
pipelines/supabase/: .gitignore  config.toml
(+1034 files in other folders)
