[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "lxml>=6.0.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.43",
    "supabase>=2.18.1",
]
