[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "feedparser>=6.0.11",
    "lxml>=6.0.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "supabase>=2.18.1",
]
